--- a/svg_test.html
+++ b/svg_test.html
@@ -1,1 +1,20 @@
-<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">\n  <circle cx="50" cy="50" r="40" fill="white" stroke="black" stroke-width="2"/>\n  <ellipse cx="35" cy="40" rx="5" ry="7" fill="black"/>\n  <ellipse cx="65" cy="40" rx="5" ry="7" fill="black"/>\n  <path d="M 50 60 L 40 75 L 60 75 Z" fill="pink" stroke="black" stroke-width="1"/>\n  <path d="M 20 30 L 10 40" stroke="black" stroke-width="2"/>\n  <path d="M 80 30 L 90 40" stroke="black" stroke-width="2"/>\n  <rect x="35" y="10" width="30" height="15" fill="gray" stroke="black" stroke-width="1"/>\n  <rect x="45" y="5" width="10" height="5" fill="darkgray" stroke="black" stroke-width="1"/>\n</svg>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SVG Face</title>
+  <style>
+    body {
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+  </style>
+</head>
+<body>
+ <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="40" fill="white" stroke="black" stroke-width="2"/><ellipse cx="35" cy="40" rx="5" ry="7" fill="black"/><ellipse cx="65" cy="40" rx="5" ry="7" fill="black"/><path d="M 50 60 L 40 75 L 60 75 Z" fill="pink" stroke="black" stroke-width="1"/><path d="M 20 30 L 10 40" stroke="black" stroke-width="2"/><path d="M 80 30 L 90 40" stroke="black" stroke-width="2"/><rect x="35" y="10" width="30" height="15" fill="gray" stroke="black" stroke-width="1"/><rect x="45" y="5" width="10" height="5" fill="darkgray" stroke="black" stroke-width="1"/></svg>
+</body>
+</html>
