--- a/svg_test.html
+++ b/svg_test.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>SVG</title>
+<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="40" fill="white" stroke="black" stroke-width="2"/><ellipse cx="35" cy="40" rx="5" ry="7" fill="black"/><ellipse cx="65" cy="40" rx="5" ry="7" fill="black"/><path d="M 50 60 L 40 75 L 60 75 Z" fill="pink" stroke="black" stroke-width="1"/><path d="M 20 30 L 10 40" stroke="black" stroke-width="2"/><path d="M 80 30 L 90 40" stroke="black" stroke-width="2"/><rect x="35" y="10" width="30" height="15" fill="gray" stroke="black" stroke-width="1"/><rect x="45" y="5" width="10" height="5" fill="darkgray" stroke="black" stroke-width="1"/></svg>
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,5 +22,68 @@
 </head>
 <body>
  <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="40" fill="white" stroke="black" stroke-width="2"/><ellipse cx="35" cy="40" rx="5" ry="7" fill="black"/><ellipse cx="65" cy="40" rx="5" ry="7" fill="black"/><path d="M 50 60 L 40 75 L 60 75 Z" fill="pink" stroke="black" stroke-width="1"/><path d="M 20 30 L 10 40" stroke="black" stroke-width="2"/><path d="M 80 30 L 90 40" stroke="black" stroke-width="2"/><rect x="35" y="10" width="30" height="15" fill="gray" stroke="black" stroke-width="1"/><rect x="45" y="5" width="10" height="5" fill="darkgray" stroke="black" stroke-width="1"/></svg>
+
+
+ 
+ --- Start ---
+
+```svg
+<svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+    <rect width="100%" height="100%" fill="white"/>
+    <circle cx="100" cy="100" r="60" fill="black"/>
+    <circle cx="80" cy="90" r="10" fill="white"/>
+    <circle cx="120" cy="90" r="10" fill="white"/>
+    <circle cx="80" cy="90" r="5" fill="black"/>
+    <circle cx="120" cy="90" r="5" fill="black"/>
+
+    <path d="M70,110 Q100,130 130,110" fill="none" stroke="white" stroke-width="4"/>
+
+    <rect x="70" y="40" width="60" height="20" fill="black"/>
+    <rect x="80" y="30" width="40" height="20" fill="black"/>
+</svg>
+```
+```xml
+<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+  <circle cx="50" cy="55" r="30" fill="white" stroke="black" stroke-width="2"/>
+  <ellipse cx="38" cy="45" rx="5" ry="7" fill="black"/>
+  <ellipse cx="62" cy="45" rx="5" ry="7" fill="black"/>
+  <path d="M 40 65 Q 50 75 60 65" stroke="black" stroke-width="2" fill="none"/>
+  <path d="M 30 40 L 20 30" stroke="black" stroke-width="2" />
+  <path d="M 70 40 L 80 30" stroke="black" stroke-width="2" />
+  <rect x="35" y="15" width="30" height="10" fill="grey" stroke="black" stroke-width="1"/>
+  <path d="M 50 15 L 50 5" stroke="black" stroke-width="2"/>
+</svg>
+```
+Here is a simplified rendering of a cat wearing a hat:
+
+
+<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+<path d="M 50 5 L 5 5 L 20 30 L 50 30 L 80 30 L 95 5 Z" fill="#000" stroke="#000" stroke-width="5"/>
+<path d="M 30 25 L 20 35 L 30 45 L 40 35 L 30 25 Z" fill="#000" stroke="#000" stroke-width="5" />
+<path d="M 30 20 L 20 30 L 40 30 L 50 20 Z" fill="#000" stroke="#000" stroke-width="5" />
+<ellipse cx="50" cy="50" rx="20" ry="10" fill="#000" stroke="#000" stroke-width="2" />
+<ellipse cx="37.5" cy="20" rx="7.5" ry="5" fill="#000" stroke="#000" stroke-width="2" />
+<rect x="5" y="15" width="20" height="20" rx="2" fill="#FFFFFF"/>
+<rect x="80" y="15" width="20" height="20" rx="2" fill="#FFFFFF"/>
+<rect x="20" y="30" width="20" height="20" rx="2" fill="#FFFFFF"/>
+<path d="M 10 30 L 30 30 L 20 40 L 10 30 Z" fill="#FFFFFF" stroke="#000" stroke-width="2" />
+<path d="M 80 30 L 60 30 L 70 40 L 80 30 Z" fill="#FFFFFF" stroke="#000" stroke-width="2" />
+<path d="M 25 35 L 35 35 L 25 45 L 25 35 Z" fill="#000" stroke="#FFFFFF" stroke-width="2" />
+<circle cx="45" cy="55" r="10" fill="#FFFFFF" />
+<circle cx="45" cy="65" r="10" fill="black"/>
+<polygon points="48,65 43,70 52,65" fill="black"/>
+</svg>
+Here is an SVG image of a black and white cat wearing a hat:
+
+<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+  <g transform="translate(50, 50)">
+    <path d="M-40,-40 a40,40 0 1,0 80,0 a40,40 0 1,0 -80,0" fill="#000000" />
+    <path d="M-30,-30 a30,30 0 1,0 60,0 a30,30 0 1,0 -60,0" fill="#ffffff" />
+    <circle cx="-15" cy="-15" r="5" fill="#000000" />
+    <circle cx="15" cy="-15" r="5" fill="#000000" />
+    <path d="M-20,10 a20,10 0 1,0 40,0 a20,10 0 1,0 -40,0" fill="#000000" />
+    <path d="M-30,0 a30,20 0 1,0 60,0 a30,20 0 1,0 -60,0" fill="#663300" />
+  </g>
+</svg>
 </body>
 </html>
