--- a/home.html
+++ b/home.html
@@ -21,44 +21,43 @@
 <body>
 
     <h2>qualtrics_styles</h2>
-    <a href="https://bethatcurtin.github.io/qualtrics_styles/forms.css">forms.css</a>
+    <p>
+    <a href="https://bethatcurtin.github.io/qualtrics_styles/forms.css">forms.css</a><br> </p>
 
     <h2>retired_extensions</h2>
-    <a
-        href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension-v2.js">openai-scratch-extension-v2.js</a>
-    <a
-        href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension-v3.js">openai-scratch-extension-v3.js</a>
-    <a
-        href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension.js">openai-scratch-extension.js</a>
+    <p>
+    <a href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension-v2.js">openai-scratch-extension-v2.js</a><br>
+    <a href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension-v3.js">openai-scratch-extension-v3.js</a><br>
+    <a href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension.js">openai-scratch-extension.js</a><br> </p>
 
     <h2>testing</h2>
-    <a href="https://bethatcurtin.github.iotesting/iframe_copy.js">iframe_copy.js</a>
-    <a href="https://bethatcurtin.github.io/testing/iframe_gen.js">iframe_gen.js</a>
-    <a href="https://bethatcurtin.github.io/testing/iframe_mod.js">iframe_mod.js</a>
-    <a href="https://bethatcurtin.github.io/testing/openai-scratch-dalle-v3.js">openai-scratch-dalle-v3.js</a>
-    <a href="https://bethatcurtin.github.io/testing/svg_test.html">svg_test.html</a>
+    <p>
+    <a href="https://bethatcurtin.github.iotesting/iframe_copy.js">iframe_copy.js</a><br>
+    <a href="https://bethatcurtin.github.io/testing/iframe_gen.js">iframe_gen.js</a><br>
+    <a href="https://bethatcurtin.github.io/testing/iframe_mod.js">iframe_mod.js</a><br>
+    <a href="https://bethatcurtin.github.io/testing/openai-scratch-dalle-v3.js">openai-scratch-dalle-v3.js</a><br>
+    <a href="https://bethatcurtin.github.io/testing/svg_test.html">svg_test.html</a><br></p>
 
     <h2>web_pages</h2>
-    <a href="https://bethatcurtin.github.io/web_pages/gpt_img.html">gpt_img.html</a>
-    <a href="https://bethatcurtin.github.io/web_pages/index.html">index.html</a>
+    <p>
+    <a href="https://bethatcurtin.github.io/web_pages/gpt_img.html">gpt_img.html</a><br>
+    <a href="https://bethatcurtin.github.io/web_pages/index.html">index.html</a><br> </p>
 
     <h2>Other</h2>
+    <p>
     <a href="https://bethatcurtin.github.io/">README.md aka HOME</a>
-    <a href="https://bethatcurtin.github.io/openai-scratch-chat-v1.js">openai-scratch-chat-v1.js</a>
-    <a href="https://bethatcurtin.github.io/openai-scratch-chat-v2.js">openai-scratch-chat-v2.js</a>
-    <a href="https://bethatcurtin.github.io/openai-scratch-dalle-v1.js">openai-scratch-dalle-v1.js</a>
-    <a href="https://bethatcurtin.github.io/openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a>
+    <a href="https://bethatcurtin.github.io/openai-scratch-chat-v1.js">openai-scratch-chat-v1.js</a><br>
+    <a href="https://bethatcurtin.github.io/openai-scratch-chat-v2.js">openai-scratch-chat-v2.js</a><br>
+    <a href="https://bethatcurtin.github.io/openai-scratch-dalle-v1.js">openai-scratch-dalle-v1.js</a><br>
+    <a href="https://bethatcurtin.github.io/openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a><br> </p>
 
 
 
     <h2>Scratch Extensions:</h2>
-    <p>Using TurboWarp,</p>
-    <a href="https://turbowarp.org/editor">Open TurboWarp editor</a>
-
-
-    <p>Paste the applicable url into the 'Custom Extension' url box:<br>
+    <p>Using TurboWarp,<br>
+    <a href="https://turbowarp.org/editor">Open TurboWarp editor</a><br>
+    Paste the applicable url into the 'Custom Extension' url box:<br>
         https://bethatcurtin.github.io/[filename.js]<br><br>
-
         You'll then be able to use the OpenAI API in Blocky form. </p>
 </body>
 
