--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <h2>testing</h2>
     <p>
-    <a href="https://bethatcurtin.github.iotesting/iframe_copy.js">iframe_copy.js</a><br>
+    <a href="https://bethatcurtin.github.io/testing/iframe_copy.js">iframe_copy.js</a><br>
     <a href="https://bethatcurtin.github.io/testing/iframe_gen.js">iframe_gen.js</a><br>
     <a href="https://bethatcurtin.github.io/testing/iframe_mod.js">iframe_mod.js</a><br>
     <a href="https://bethatcurtin.github.io/testing/openai-scratch-dalle-v3.js">openai-scratch-dalle-v3.js</a><br>
