--- a/index.html
+++ b/index.html
@@ -22,34 +22,26 @@
 
     <h2>qualtrics_styles</h2>
     <p>
-    <a href="https://bethatcurtin.github.io/qualtrics_styles/forms.css">forms.css</a><br> </p>
+    <a href="./qualtrics_styles/">Open</a><br> </p>
 
     <h2>retired_extensions</h2>
     <p>
-    <a href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension-v2.js">openai-scratch-extension-v2.js</a><br>
-    <a href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension-v3.js">openai-scratch-extension-v3.js</a><br>
-    <a href="https://bethatcurtin.github.io/retired_extensions/openai-scratch-extension.js">openai-scratch-extension.js</a><br> </p>
+    <a href="./retired_extensions/">Open</a></p>
 
     <h2>testing</h2>
     <p>
-    <a href="https://bethatcurtin.github.io/testing/iframe_copy.js">iframe_copy.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/iframe_gen.js">iframe_gen.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/iframe_mod.js">iframe_mod.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/openai-scratch-dalle-v3.js">openai-scratch-dalle-v3.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/svg_test.html">svg_test.html</a><br></p>
+    <a href="./testing/">Open</a><br>
+></p>
 
     <h2>web_pages</h2>
     <p>
-    <a href="https://bethatcurtin.github.io/web_pages/gpt_img.html">gpt_img.html</a><br>
-    <a href="https://bethatcurtin.github.io/web_pages/index.html">index.html</a><br> </p>
+    <a href="./web_pages/">Open</a><br>
+ </p>
 
     <h2>Other</h2>
     <p>
     <a href="https://bethatcurtin.github.io/">README.md aka HOME</a>
-    <a href="https://bethatcurtin.github.io/openai-scratch-chat-v1.js">openai-scratch-chat-v1.js</a><br>
-    <a href="https://bethatcurtin.github.io/openai-scratch-chat-v2.js">openai-scratch-chat-v2.js</a><br>
-    <a href="https://bethatcurtin.github.io/openai-scratch-dalle-v1.js">openai-scratch-dalle-v1.js</a><br>
-    <a href="https://bethatcurtin.github.io/openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a><br> </p>
+  </p>
 
 
 
