--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <h2>Other</h2>
     <p>
     <a href="https://bethatcurtin.github.io/">README.md aka HOME</a>
+    <a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1.js</a><br>
+    <a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2.js</a><br>
+    <a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1.js</a><br>
+    <a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a><br> 
   </p>
 
 
