--- a/qualtrics_styles/index.html
+++ b/qualtrics_styles/index.html
@@ -21,7 +21,7 @@
 <body>
  <h2>qualtrics_styles</h2>
     <p>
-    <a href="https://bethatcurtin.github.io/qualtrics_styles/forms.css">forms.css</a><br> </p>
+    <a href="./forms.css">forms.css</a><br> </p>
 </body>
 
 </html>
