--- a/testing/index.html
+++ b/testing/index.html
@@ -21,11 +21,11 @@
 <body>
     <h2>testing</h2>
     <p>
-    <a href="https://bethatcurtin.github.iotesting/iframe_copy.js">iframe_copy.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/iframe_gen.js">iframe_gen.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/iframe_mod.js">iframe_mod.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/openai-scratch-dalle-v3.js">openai-scratch-dalle-v3.js</a><br>
-    <a href="https://bethatcurtin.github.io/testing/svg_test.html">svg_test.html</a><br></p>
+    <a href="./iframe_copy.js">iframe_copy.js</a><br>
+    <a href="./iframe_gen.js">iframe_gen.js</a><br>
+    <a href="./iframe_mod.js">iframe_mod.js</a><br>
+    <a href="./openai-scratch-dalle-v3.js">openai-scratch-dalle-v3.js</a><br>
+    <a href="./svg_test.html">svg_test.html</a><br></p>
 </body>
 
 </html>
