--- a/web_pages/index.html
+++ b/web_pages/index.html
@@ -21,8 +21,8 @@
 <body>
 <h2>web_pages</h2>
     <p>
-    <a href="https://bethatcurtin.github.io/web_pages/gpt_img.html">gpt_img.html</a><br>
-    <a href="https://bethatcurtin.github.io/web_pages/index.html">index.html</a><br> </p>
+    <a href="./gpt_img.html">gpt_img.html</a><br>
+
 </body>
 
 </html>
