--- a/retired_extensions/index.html
+++ b/retired_extensions/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>testing</title>
+    <title>retired extenstions</title>
     <style>
         body {
             background-color: #fff5fe;
@@ -19,13 +19,11 @@
 </head>
 
 <body>
-    <h2>testing</h2>
+ <h2>retired_extensions</h2>
     <p>
-    <a href="./iframe_copy.js">iframe_copy.js</a><br>
-    <a href="./iframe_gen.js">iframe_gen.js</a><br>
-    <a href="./iframe_mod.js">iframe_mod.js</a><br>
-    <a href="./openai-scratch-dalle-v3.js">openai-scratch-dalle-v3.js</a><br>
-    <a href="./svg_test.html">svg_test.html</a><br></p>
+    <a href="./openai-scratch-extension-v2.js">openai-scratch-extension-v2.js</a><br>
+    <a href="./openai-scratch-extension-v3.js">openai-scratch-extension-v3.js</a><br>
+    <a href="./openai-scratch-extension.js">openai-scratch-extension.js</a><br> </p>
 </body>
 
 </html>
