--- a/index.html
+++ b/index.html
@@ -2,51 +2,67 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Beth's Project Page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://bethatcurtin.github.io/styles/main.css">
+  <meta charset="UTF-8">
+  <title>Beth's Project Page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://bethatcurtin.github.io/styles/main.css">
 </head>
 
 <body>
 
-    <h2>qualtrics_styles</h2>
-    <p>
-    <a href="./qualtrics_styles/">Open</a><br> </p>
+  <nav>
+    <ul>
+      <li><a href="./qualtrics_styles/">Qualtrics Styles</a></li>
+      <li><a href="./retired_extensions/">Old Scratch Extension</a></li>
+      <li><a href="./web_pages/">GPT Image Demo</a></li>
+      <li><a href="./testing/">Testing Script</a></li>
+      <li><a href="https://turbowarp.org/editor">Open TurboWarp</a></li>
+    </ul>
+  </nav>
 
-    <h2>retired_extensions</h2>
-    <p>
-    <a href="./retired_extensions/">Open</a></p>
+  <h2>qualtrics_styles</h2>
+  <p>
+    <a href="./qualtrics_styles/">Open</a><br>
+  </p>
 
-    <h2>testing</h2>
-    <p>
+  <h2>retired_extensions</h2>
+  <p>
+    <a href="./retired_extensions/">Open</a>
+  </p>
+
+  <h2>testing</h2>
+  <p>
     <a href="./testing/">Open</a><br>
-></p>
+    >
+  </p>
 
-    <h2>web_pages</h2>
-    <p>
+  <h2>web_pages</h2>
+  <p>
     <a href="./web_pages/">Open</a><br>
- </p>
+  </p>
 
-    <h2>Other</h2>
-    <p>
+  <h2>Other</h2>
+  <p>
     <a href="https://bethatcurtin.github.io/">README.md aka HOME</a>
     <a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1.js</a><br>
     <a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2.js</a><br>
     <a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1.js</a><br>
-    <a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a><br> 
+    <a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a><br>
   </p>
 
 
 
-    <h2>Scratch Extensions:</h2>
-    <p>Using TurboWarp,<br>
+  <h2>Scratch Extensions:</h2>
+  <p>Using TurboWarp,<br>
     <a href="https://turbowarp.org/editor">Open TurboWarp editor</a><br>
     Paste the applicable url into the 'Custom Extension' url box:<br>
-        https://bethatcurtin.github.io/[filename.js]<br><br>
-        You'll then be able to use the OpenAI API in Blocky form. </p>
+    https://bethatcurtin.github.io/[filename.js]<br><br>
+    You'll then be able to use the OpenAI API in Blocky form.
+  </p>
 </body>
 
 </html>
