--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="./retired_extensions/">Old Scratch Extension</a></li>
       <li><a href="./web_pages/">GPT Image Demo</a></li>
       <li><a href="./testing/">Testing Script</a></li>
-      <li><a href="https://turbowarp.org/editor">Open TurboWarp</a></li>
+      
     </ul>
   </nav>
 
@@ -53,6 +53,27 @@
     <a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1.js</a><br>
     <a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a><br>
   </p>
+    <nav>
+    <ul>
+      <li><a href="./qualtrics_styles/">Qualtrics Styles</a>
+        <nav>
+          <ul>
+            <li><a href="./qualtrics_styles/forms.css">open forms.css</a></li>
+          </ul>
+        </nav></li>
+      <li><a href="./retired_extensions/">Old Scratch Extension</a>
+        <nav>
+          <ul>
+            <li><a href="./retired_extensions/openai-scratch-extension.js">open openai-scratch-extension.js</a></li>
+            <li><a href="./retired_extensions/openai-scratch-extension-v2.js">open openai-scratch-extension-v2.js</a></li>
+            <li><a href="./retired_extensions/openai-scratch-extension-v3.js">open openai-scratch-extension-v3.js</a></li>
+          </ul>
+        </nav></li></li>
+      <li><a href="./web_pages/">GPT Image Demo</a></li>
+      <li><a href="./testing/">Testing Script</a></li>
+      
+    </ul>
+  </nav>
 
 
 
