--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <button class="collapsible">qualtrics_styles</button>
   <div class="content">
     <a href="./qualtrics_styles/forms.css/" class="nav-link">forms</a>
-
+  </div>
     <button class="collapsible">retired_extensions</button>
     <div class="content">
       <a href="./retired_extensions/openai-scratch-extension.js/" class="nav-link">openai-scratch-extension</a>
