--- a/index.html
+++ b/index.html
@@ -14,91 +14,33 @@
 </head>
 
 <body>
-  
-  <h2>Navigation</h2>
-  <button class="collapsible">qualtrics_styles</button>
-  <div class="content">
-    <a href="./qualtrics_styles/forms.css/" class="nav-link">forms</a>
-  </div>
-    <button class="collapsible">retired_extensions</button>
-    <div class="content">
-      <a href="./retired_extensions/openai-scratch-extension.js/" class="nav-link">openai-scratch-extension</a>
-      <a href="./retired_extensions/openai-scratch-extension-v2.js/" class="nav-link">openai-scratch-extension-v2</a>
-      <a href="./retired_extensions/openai-scratch-extension-v3.js/" class="nav-link">openai-scratch-extension-v3</a>
-    </div>
-    <script>
-      constcollapsibles = document.querySelectorAll('.collapsible');
-      collapsibles.forEach(button => {
-        button.addEventListener('click', () => {
-          button.classList.toggle('active');
-          constcontent = button.nextElementSibling;
-          content.style.display = content.style.display === 'block' ? 'none' : 'block';
-        });
-      });
-    </script>
 
   <nav>
     <ul>
-      <li><a href="./qualtrics_styles/">Qualtrics Styles</a></li>
-      <li><a href="./retired_extensions/">Old Scratch Extension</a></li>
-      <li><a href="./web_pages/">GPT Image Demo</a></li>
-      <li><a href="./testing/">Testing Script</a></li>
-      
-    </ul>
-  </nav>
-
-  <h2>qualtrics_styles</h2>
-  <p>
-    <a href="./qualtrics_styles/">Open</a><br>
-  </p>
-
-  <h2>retired_extensions</h2>
-  <p>
-    <a href="./retired_extensions/">Open</a>
-  </p>
-
-  <h2>testing</h2>
-  <p>
-    <a href="./testing/">Open</a><br>
-    >
-  </p>
-
-  <h2>web_pages</h2>
-  <p>
-    <a href="./web_pages/">Open</a><br>
-  </p>
-
-  <h2>Other</h2>
-  <p>
-    <a href="https://bethatcurtin.github.io/">README.md aka HOME</a>
-    <a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1.js</a><br>
-    <a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2.js</a><br>
-    <a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1.js</a><br>
-    <a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2.js</a><br>
-  </p>
-    <nav>
-    <ul>
-      <li><a href="./qualtrics_styles/">Qualtrics Styles</a>
+      <li><a href="./web_pages/">Web Pages</a>
         <nav>
           <ul>
-            <li><a href="./qualtrics_styles/forms.css">open forms.css</a></li>
+            <li><a href="./web_pages/gpt_img.html/">gpt_img</a></li>
+            <li><a href="./web_pages/svg_test.html/">svg_test</a></li>
           </ul>
-        </nav></li>
-      <li><a href="./retired_extensions/">Old Scratch Extension</a>
+        </nav>
+      </li>
+      <li>Active Extensions
         <nav>
           <ul>
-            <li><a href="./retired_extensions/openai-scratch-extension.js">open openai-scratch-extension.js</a></li>
-            <li><a href="./retired_extensions/openai-scratch-extension-v2.js">open openai-scratch-extension-v2.js</a></li>
-            <li><a href="./retired_extensions/openai-scratch-extension-v3.js">open openai-scratch-extension-v3.js</a></li>
+            <li><a href="./openai-scratch-chat-v2.js/">open openai-scratch-extension-v2.js</a></li>
+            <li><a href="./openai-scratch-chat-v2.js/">open openai-scratch-extension-v3.js</a></li>
+            <li><a href="./openai-scratch-dalle-v2.js/">open openai-scratch-extension-v2.js</a></li>
+            <li><a href="./openai-scratch-dalle-v2.js/">open openai-scratch-extension-v3.js</a></li>
           </ul>
-        </nav></li></li>
+        </nav>
+      </li>
+      </li>
       <li><a href="./web_pages/">GPT Image Demo</a></li>
       <li><a href="./testing/">Testing Script</a></li>
-      
+
     </ul>
   </nav>
-
-
 
   <h2>Scratch Extensions:</h2>
   <p>Using TurboWarp,<br>
