--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 <body>
 
+  <h2>Navigate</h2>
+
   <nav>
     <ul>
-      <li><a href="./web_pages/">Web Pages</a>
+      <li>Web Pages</a>
         <nav>
           <ul>
             <li><a href="./web_pages/gpt_img.html/">gpt_img</a></li>
@@ -36,13 +38,10 @@
         </nav>
       </li>
       </li>
-      <li><a href="./web_pages/">GPT Image Demo</a></li>
-      <li><a href="./testing/">Testing Script</a></li>
-
     </ul>
   </nav>
 
-  <h2>Scratch Extensions:</h2>
+  <h2>Scratch Extensions</h2>
   <p>Using TurboWarp,<br>
     <a href="https://turbowarp.org/editor">Open TurboWarp editor</a><br>
     Paste the applicable url into the 'Custom Extension' url box:<br>
