--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
   <h2>Navigate</h2>
-
+<h3>View test pages and active extensions</h3>
   <nav>
     <ul>
-      <li>Web Pages</a>
+      <li>Web Pages
         <nav>
           <ul>
             <li><a href="./web_pages/gpt_img.html/">gpt_img</a></li>
@@ -27,6 +27,7 @@
           </ul>
         </nav>
       </li>
+
       <li>Active Extensions
         <nav>
           <ul>
@@ -37,17 +38,24 @@
           </ul>
         </nav>
       </li>
-      </li>
     </ul>
   </nav>
 
   <h2>Scratch Extensions</h2>
+  <h3>View test pages and active extensions</h3>
   <p>Using TurboWarp,<br>
     <a href="https://turbowarp.org/editor">Open TurboWarp editor</a><br>
     Paste the applicable url into the 'Custom Extension' url box:<br>
     https://bethatcurtin.github.io/[filename.js]<br><br>
     You'll then be able to use the OpenAI API in Blocky form.
   </p>
+
+
+  <h2>Debug</h2>
+  <h1>Heading 1</h1>
+  <h2>Heading 2</h2>
+  <h3>Heading 3</h3>
+  <p>Paragraph text</p>
 </body>
 
 </html>
