--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </nav>
 
   <h2>Scratch Extensions</h2>
-  <h3>View test pages and active extensions</h3>
+  <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
   <p>Using TurboWarp,<br>
     <a href="https://turbowarp.org/editor">Open TurboWarp editor</a><br>
     Paste the applicable url into the 'Custom Extension' url box:<br>
