--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <li>Web Pages
         <nav>
           <ul>
-            <li><a href="./web_pages/gpt_img.html/">gpt_img</a></li>
-            <li><a href="./web_pages/svg_test.html/">svg_test</a></li>
+            <li><a href="./web_pages/gpt_img.html">gpt_img</a></li>
+            <li><a href="./web_pages/svg_test.html">svg_test</a></li>
           </ul>
         </nav>
       </li>
@@ -31,10 +31,10 @@
       <li>Active Extensions
         <nav>
           <ul>
-            <li><a href="./openai-scratch-chat-v2.js/">open openai-scratch-extension-v2.js</a></li>
-            <li><a href="./openai-scratch-chat-v2.js/">open openai-scratch-extension-v3.js</a></li>
-            <li><a href="./openai-scratch-dalle-v2.js/">open openai-scratch-extension-v2.js</a></li>
-            <li><a href="./openai-scratch-dalle-v2.js/">open openai-scratch-extension-v3.js</a></li>
+            <li><a href="./openai-scratch-chat-v2.js">open openai-scratch-extension-v2.js</a></li>
+            <li><a href="./openai-scratch-chat-v2.js">open openai-scratch-extension-v3.js</a></li>
+            <li><a href="./openai-scratch-dalle-v2.js">open openai-scratch-extension-v2.js</a></li>
+            <li><a href="./openai-scratch-dalle-v2.js">open openai-scratch-extension-v3.js</a></li>
           </ul>
         </nav>
       </li>
