--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
   <h2>Scratch Extensions</h2>
   <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
   <p>Using TurboWarp,<br>
-    <a href="https://turbowarp.org/editor">Open TurboWarp editor</a><br>
+    <div class="button-style">
+    <a href="https://turbowarp.org/editor">Open TurboWarp editor</a>
+  </div>
     Paste the applicable url into the 'Custom Extension' url box:<br>
     https://bethatcurtin.github.io/[filename.js]<br><br>
     You'll then be able to use the OpenAI API in Blocky form.
