--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <h2>Navigate</h2>
-<h3>View test pages and active extensions</h3>
+  <h3>View test pages and active extensions</h3>
   <nav>
     <ul>
       <li>Web Pages
@@ -43,11 +43,11 @@
 
   <h2>Scratch Extensions</h2>
   <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
-  <p>Using TurboWarp,<br>
-    <div class="button-style">
+  <p>Using TurboWarp,<br></p>
+  <div class="button-style">
     <a href="https://turbowarp.org/editor">Open TurboWarp editor</a>
   </div>
-    Paste the applicable url into the 'Custom Extension' url box:<br>
+  <p>Paste the applicable url into the 'Custom Extension' url box:<br>
     https://bethatcurtin.github.io/[filename.js]<br><br>
     You'll then be able to use the OpenAI API in Blocky form.
   </p>
