--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <h2>Navigate</h2>
   <h3>View test pages and active extensions</h3>
+  <div class="list-style">
   <nav>
     <ul>
       <li>Web Pages
@@ -40,6 +41,7 @@
       </li>
     </ul>
   </nav>
+</div>
 
   <h2>Scratch Extensions</h2>
   <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
@@ -58,6 +60,10 @@
   <h2>Heading 2</h2>
   <h3>Heading 3</h3>
   <p>Paragraph text</p>
+  <div class="button-style">
+    <a href="https://bethatcurtin.github.io/">Linked Button</a>
+  </div>
+
 </body>
 
 </html>
