--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+  <div class="section-style">
   <h2>Navigate</h2>
   <h3>View test pages and active extensions</h3>
   <div class="list-style">
@@ -42,7 +42,8 @@
     </ul>
   </nav>
 </div>
-
+</div>
+<div class="section-style">
   <h2>Scratch Extensions</h2>
   <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
   <p>Using TurboWarp,<br></p>
@@ -53,6 +54,7 @@
     https://bethatcurtin.github.io/[filename.js]<br><br>
     You'll then be able to use the OpenAI API in Blocky form.
   </p>
+</div>
 
 
   <h2>Debug</h2>
