--- a/index.html
+++ b/index.html
@@ -15,46 +15,45 @@
 
 <body>
   <div class="section-style">
-  <h2>Navigate</h2>
-  <h3>View test pages and active extensions</h3>
-  <div class="list-style">
-  <nav>
-    <ul>
-      <li>Web Pages
-        <nav>
-          <ul>
-            <li><a href="./web_pages/gpt_img.html">gpt_img</a></li>
-            <li><a href="./web_pages/svg_test.html">svg_test</a></li>
-          </ul>
-        </nav>
-      </li>
+    <h2>Navigate</h2>
+    <h3>View test pages and active extensions</h3>
+    <div class="list-style">
+      <nav>
+        <ul>
+          <li>Web Pages
+            <nav>
+              <ul>
+                <li><a href="./web_pages/gpt_img.html">gpt_img</a></li>
+                <li><a href="./web_pages/svg_test.html">svg_test</a></li>
+              </ul>
+            </nav>
+          </li>
 
-      <li>Active Extensions
-        <nav>
-          <ul>
-            <li><a href="./openai-scratch-chat-v2.js">open openai-scratch-extension-v2.js</a></li>
-            <li><a href="./openai-scratch-chat-v2.js">open openai-scratch-extension-v3.js</a></li>
-            <li><a href="./openai-scratch-dalle-v2.js">open openai-scratch-extension-v2.js</a></li>
-            <li><a href="./openai-scratch-dalle-v2.js">open openai-scratch-extension-v3.js</a></li>
-          </ul>
-        </nav>
-      </li>
-    </ul>
-  </nav>
-</div>
-</div>
-<div class="section-style">
-  <h2>Scratch Extensions</h2>
-  <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
-  <p>Using TurboWarp,<br></p>
-  <div class="button-style">
-    <a href="https://turbowarp.org/editor">Open TurboWarp editor</a>
+          <li>Active Extensions
+            <nav>
+              <ul>
+                <li><a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1</a></li>
+                <li><a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2</a></li>
+                <li><a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1</a></li>
+                <li><a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2</a></li>
+              </ul>
+            </nav>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
-  <p>Paste the applicable url into the 'Custom Extension' url box:<br>
-    https://bethatcurtin.github.io/[filename.js]<br><br>
-    You'll then be able to use the OpenAI API in Blocky form.
-  </p>
-</div>
+  <div class="section-style">
+    <h2>Scratch Extensions</h2>
+    <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
+    <p>Using TurboWarp,<br></p>
+    <div class="button-style">
+      <a href="https://turbowarp.org/editor">Open TurboWarp editor</a>
+    </div>
+    <p>Paste the applicable url into the 'Custom Extension' url box: https://bethatcurtin.github.io/[filename.js]<br>
+      You'll then be able to use the OpenAI API in Blocky form.
+    </p>
+  </div>
 
 
   <h2>Debug</h2>
