--- a/index.html
+++ b/index.html
@@ -18,29 +18,25 @@
     <h2>Navigate</h2>
     <h3>View test pages and active extensions</h3>
     <div class="list-style">
+      <p>Web Pages</p>
       <nav>
         <ul>
-          <li>Web Pages
-            <nav>
-              <ul>
-                <li><a href="./web_pages/gpt_img.html">gpt_img</a></li>
-                <li><a href="./web_pages/svg_test.html">svg_test</a></li>
-              </ul>
-            </nav>
-          </li>
-
-          <li>Active Extensions
-            <nav>
-              <ul>
-                <li><a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1</a></li>
-                <li><a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2</a></li>
-                <li><a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1</a></li>
-                <li><a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2</a></li>
-              </ul>
-            </nav>
-          </li>
+          <li><a href="./web_pages/gpt_img.html">gpt_img</a></li>
+          <li><a href="./web_pages/svg_test.html">svg_test</a></li>
         </ul>
       </nav>
+
+
+      <p>Active Extensions</p>
+      <nav>
+        <ul>
+          <li><a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1</a></li>
+          <li><a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2</a></li>
+          <li><a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1</a></li>
+          <li><a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2</a></li>
+        </ul>
+      </nav>
+
     </div>
   </div>
   <div class="section-style">
