--- a/index.html
+++ b/index.html
@@ -58,7 +58,24 @@
   <h3>Heading 3</h3>
   <p>Paragraph text</p>
   <div class="button-style">
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>Paragraph text</p>
     <a href="https://bethatcurtin.github.io/">Linked Button</a>
+  </div>
+
+  <div class="section-style">
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>Paragraph text</p>
+  </div>
+  <div class="list-style">
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>Paragraph text</p>
   </div>
 
 </body>
