--- a/index.html
+++ b/index.html
@@ -56,26 +56,33 @@
   <h1>Heading 1</h1>
   <h2>Heading 2</h2>
   <h3>Heading 3</h3>
+  <a href="https://bethatcurtin.github.io/">Link</a>
+  
   <p>Paragraph text</p>
   <div class="button-style">
+    <h1>Class button-style</h1>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <p>Paragraph text</p>
-    <a href="https://bethatcurtin.github.io/">Linked Button</a>
+    <a href="https://bethatcurtin.github.io/">Link</a>
   </div>
 
   <div class="section-style">
+    <h1>Class section-style</h1>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <p>Paragraph text</p>
+    <a href="https://bethatcurtin.github.io/">Link</a>
   </div>
   <div class="list-style">
+    <h1>Class list-style</h1>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <p>Paragraph text</p>
+    <a href="https://bethatcurtin.github.io/">Link</a>
   </div>
 
 </body>
