--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://bethatcurtin.github.io/styles/main.css">
-  <link rel="icon" type="image/x-icon" href="https://bethatcurtin.github.io/assets/submark-round.png">
+  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="icon" type="image/x-icon" href="./assets/submark-round.png">
 </head>
 
 <body>
   <div class="section-style">
+    <h1>Beth's Project Page !!</h1>
+  </div>
+  <div class="section-style">
     <h2>Navigate</h2>
     <h3>View test pages and active extensions</h3>
-    <div class="list-style">
+    
       <p>Web Pages</p>
       <nav>
         <ul>
@@ -37,7 +40,17 @@
         </ul>
       </nav>
 
-    </div>
+      <p>Tests</p>
+      <nav>
+        <ul>
+          <li><a href="./testing/hf_scratch_v8.js">hf_scratch_v8</a></li>
+          <li><a href="./testing/hf_scratch_v7.js">hf_scratch_v7</a></li>
+          <li><a href="./testing/hf_scratch_v6.js">hf_scratch_v6</a></li>
+          <li><a href="./testing/openai-scratch-dalle-v3.js">openai-scratch-dalle-v3</a></li>
+        </ul>
+      </nav>
+
+    
   </div>
   <div class="section-style">
     <h2>Scratch Extensions</h2>
@@ -46,44 +59,12 @@
     <div class="button-style">
       <a href="https://turbowarp.org/editor">Open TurboWarp editor</a>
     </div>
-    <p>Paste the applicable url into the 'Custom Extension' url box: https://bethatcurtin.github.io/[filename.js]<br>
+    <p>Paste the applicable url into the 'Custom Extension' url box: <b>https://bethatcurtin.github.io/[filename.js]</b><br>
       You'll then be able to use the OpenAI API in Blocky form.
     </p>
   </div>
 
 
-  <h2>Debug</h2>
-  <h1>Heading 1</h1>
-  <h2>Heading 2</h2>
-  <h3>Heading 3</h3>
-  <a href="https://bethatcurtin.github.io/">Link</a>
-  
-  <p>Paragraph text</p>
-  <div class="button-style">
-    <h1>Class button-style</h1>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Paragraph text</p>
-    <a href="https://bethatcurtin.github.io/">Link</a>
-  </div>
-
-  <div class="section-style">
-    <h1>Class section-style</h1>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Paragraph text</p>
-    <a href="https://bethatcurtin.github.io/">Link</a>
-  </div>
-  <div class="list-style">
-    <h1>Class list-style</h1>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Paragraph text</p>
-    <a href="https://bethatcurtin.github.io/">Link</a>
-  </div>
 
 </body>
 
