--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     </p>
   </div>
 
+  <div class="img-container">
+    <a href="https://www.genaibootcamps.com.au"><img src="./assets/primary-icon-round.png" alt="logo icon"></a>
+  </div>
+
 
 
 </body>
