--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
-  <link rel="icon" type="image/x-icon" href="./assets/primary-icon-round.png">
+  <link rel="icon" type="image/x-icon" href="./assets/b-profile-pic.png">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
   </div>
 
   <div class="img-container">
-    <a href="https://www.genaibootcamps.com.au"><img src="./assets/primary-icon-round.png" alt="logo icon"></a>
+    <a href="https://www.genaibootcamps.com.au"><img src="./assets/b-profile-pic.png" alt="logo icon"></a>
   </div>
 
 
