--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 </head>
 
 <body>
+
   <div class="section-style">
     <h1>Beth's Project Page !!</h1>
   </div>
-  <div class="section-style">
-    <h2>Navigate</h2>
-    <h3>View test pages and active extensions</h3>
-    
+  <div style="display:flex;flex-direction: row; justify-content: center">
+    <div class="section-style">
+      <h2>Navigate</h2>
+      <h3>View test pages and active extensions</h3>
+
       <p>Web Pages</p>
       <nav>
         <ul>
@@ -50,8 +52,18 @@
         </ul>
       </nav>
 
-    
+
+    </div>
+    <div class="section-style">
+      <h2>Go to the repo</h2>
+      <div class="button-style">
+        <a href="https://github.com/bethatcurtin/bethatcurtin.github.io">Open bethatcurtin repo</a>
+      </div>
+
+    </div>
   </div>
+
+
   <div class="section-style">
     <h2>Scratch Extensions</h2>
     <h3>Instructions for using extensions in Turbowarp (Scratch)</h3>
@@ -59,7 +71,8 @@
     <div class="button-style">
       <a href="https://turbowarp.org/editor">Open TurboWarp editor</a>
     </div>
-    <p>Paste the applicable url into the 'Custom Extension' url box: <b>https://bethatcurtin.github.io/[filename.js]</b><br>
+    <p>Paste the applicable url into the 'Custom Extension' url box:
+      <b>https://bethatcurtin.github.io/[filename.js]</b><br>
       You'll then be able to use the OpenAI API in Blocky form.
     </p>
   </div>
