--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="section-style">
     <h1>Beth's Project Page !!</h1>
   </div>
-  <div style="display:flex;flex-direction: row; justify-content: space-between">
+  <div class="column-container">
     <div class="section-style">
       <h2>Navigate</h2>
       <h3>View test pages and active extensions</h3>
