--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Beth's Project Page !!</h1>
   </div>
   <div class="column-container">
-    <div class="section-style">
+    <div class="column-item">
       <h2>Navigate</h2>
       <h3>View test pages and active extensions</h3>
 
@@ -54,7 +54,7 @@
 
 
     </div>
-    <div class="section-style">
+    <div class="column-item">
       <h2>Go to the repo</h2>
       <div class="button-style">
         <a href="https://github.com/bethatcurtin/bethatcurtin.github.io">Open bethatcurtin repo</a>
