--- a/index.html
+++ b/index.html
@@ -15,53 +15,50 @@
 
 <body>
 
+
   <div class="section-style">
     <h1>Beth's Project Page !!</h1>
   </div>
-  <div class="column-container">
-    <div class="column-item">
-      <h2>Navigate</h2>
-      <h3>View test pages and active extensions</h3>
-
-      <p>Web Pages</p>
-      <nav>
-        <ul>
-          <li><a href="./web_pages/gpt_img.html">gpt_img</a></li>
-          <li><a href="./web_pages/svg_test.html">svg_test</a></li>
-        </ul>
-      </nav>
 
 
-      <p>Active Extensions</p>
-      <nav>
-        <ul>
-          <li><a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1</a></li>
-          <li><a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2</a></li>
-          <li><a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1</a></li>
-          <li><a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2</a></li>
-        </ul>
-      </nav>
+  <div class="section-style">
 
-      <p>Tests</p>
-      <nav>
-        <ul>
-          <li><a href="./testing/hf_scratch_v8.js">hf_scratch_v8</a></li>
-          <li><a href="./testing/hf_scratch_v7.js">hf_scratch_v7</a></li>
-          <li><a href="./testing/hf_scratch_v6.js">hf_scratch_v6</a></li>
-          <li><a href="./testing/openai-scratch-dalle-v3.js">openai-scratch-dalle-v3</a></li>
-        </ul>
-      </nav>
+    <h2>Navigate</h2>
+    <h3>View test pages and active extensions</h3>
+
+    <p>Active Extensions</p>
+    <nav>
+      <ul>
+        <li><a href="./openai-scratch-chat-v1.js">openai-scratch-chat-v1</a></li>
+        <li><a href="./openai-scratch-chat-v2.js">openai-scratch-chat-v2</a></li>
+        <li><a href="./openai-scratch-dalle-v1.js">openai-scratch-dalle-v1</a></li>
+        <li><a href="./openai-scratch-dalle-v2.js">openai-scratch-dalle-v2</a></li>
+      </ul>
+    </nav>
+
+    <p>WIP</p>
+    <nav>
+      <ul>
+        <li><a href="./testing/hf_scratch_v8.js">hf_scratch_v8</a></li>
+        <li><a href="./web_pages/hf_image_generator.html">hf_image_generator</a></li>
+
+      </ul>
+    </nav>
 
 
-    </div>
-    <div class="column-item">
-      <h2>Go to the repo</h2>
-      <div class="button-style">
-        <a href="https://github.com/bethatcurtin/bethatcurtin.github.io">Open bethatcurtin repo</a>
-      </div>
 
-    </div>
   </div>
+
+  <div class="section-style">
+
+    <h2>Go to the repo</h2>
+    <div class="button-style">
+      <a href="https://github.com/bethatcurtin/bethatcurtin.github.io">Open bethatcurtin repo</a>
+    </div>
+
+
+  </div>
+
 
 
   <div class="section-style">
@@ -79,6 +76,84 @@
 
   <div class="img-container">
     <a href="https://www.genaibootcamps.com.au"><img src="./assets/b-profile-pic.png" alt="logo icon"></a>
+  </div>
+
+
+
+
+
+  <div class="color-container">
+    <p class="color-block" style="background-color: #fff;padding:10px">#FFFFFF</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #14DC9A">#14DC9A</p>
+    <p class="color-block" style="background-color: #CEFAEC">#CEFAEC</p>
+    <p class="color-block" style="background-color: #9CF6D8">#9CF6D8</p>
+    <p class="color-block" style="background-color: #6BF1C5">#6BF1C5</p>
+    <p class="color-block" style="background-color: #0FA472">#0FA472</p>
+    <p class="color-block" style="background-color: #0A6E4D">#0A6E4D</p>
+
+  </div>
+  <div class="color-container">
+
+    <p class="color-block" style="background-color: #C280FF">#C280FF</p>
+    <p class="color-block" style="background-color: #F3E6FF">#F3E6FF</p>
+    <p class="color-block" style="background-color: #E7CCFF">#E7CCFF</p>
+    <p class="color-block" style="background-color: #DAB3FF">#DAB3FF</p>
+    <p class="color-block" style="background-color: #931FFF">#931FFF</p>
+    <p class="color-block" style="background-color: #6400BF">#6400BF</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #F8625C">#F8625C</p>
+    <p class="color-block" style="background-color: #FEE0DE">#FEE0DE</p>
+    <p class="color-block" style="background-color: #FCBFBD">#FCBFBD</p>
+    <p class="color-block" style="background-color: #FAA09D">#FAA09D</p>
+    <p class="color-block" style="background-color: #F4120A">#F4120A</p>
+    <p class="color-block" style="background-color: #A30D07">#A30D07</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #00D2FF">#00D2FF</p>
+    <p class="color-block" style="background-color: #CCF6FF">#CCF6FF</p>
+    <p class="color-block" style="background-color: #99EDFF">#99EDFF</p>
+    <p class="color-block" style="background-color: #66E4FF">#66E4FF</p>
+    <p class="color-block" style="background-color: #009DBF">#009DBF</p>
+    <p class="color-block" style="background-color: #00697F">#00697F</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #FF68CC">#FF68CC</p>
+    <p class="color-block" style="background-color: #FFE1F5">#FFE1F5</p>
+    <p class="color-block" style="background-color: #FFC3EB">#FFC3EB</p>
+    <p class="color-block" style="background-color: #FFA4E0">#FFE1F5</p>
+    <p class="color-block" style="background-color: #FF0DAC">#FF0DAC</p>
+    <p class="color-block" style="background-color: #B30077">#B30077</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #FFE300">#FFE300</p>
+    <p class="color-block" style="background-color: #FFF9CC">#FFF9CC</p>
+    <p class="color-block" style="background-color: #FFF399">#FFF399</p>
+    <p class="color-block" style="background-color: #FFEE66">#FFEE66</p>
+    <p class="color-block" style="background-color: #BFAA00">#BFAA00</p>
+    <p class="color-block" style="background-color: #7F7200">#7F7200</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #88F0CE">#88F0CE</p>
+    <p class="color-block" style="background-color: #E7FCF5">#E7FCF5</p>
+    <p class="color-block" style="background-color: #CFF9EB">#CFF9EB</p>
+    <p class="color-block" style="background-color: #B8F6E2">#B8F6E2</p>
+    <p class="color-block" style="background-color: #35E5AC">#35E5AC</p>
+    <p class="color-block" style="background-color: #15A777">#15A777</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #FFFFFF">#FFFFFF</p>
+    <p class="color-block" style="background-color: #FFFF00">#FFFF00</p>
+    <p class="color-block" style="background-color: #00FF00">#00FF00</p>
+    <p class="color-block" style="background-color: #00FFFF">#00FFFF</p>
+  </div>
+  <div class="color-container">
+    <p class="color-block" style="background-color: #0000FF">#0000FF</p>
+    <p class="color-block" style="background-color: #FF00FF">#FF00FF</p>
+    <p class="color-block" style="background-color: #FF0000">#FF0000</p>
+    <p class="color-block" style="background-color: #000000">#000000</p>
   </div>
 
 
