--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <ul>
         <li><a href="./testing/hf_scratch_v8.js">hf_scratch_v8</a></li>
         <li><a href="./web_pages/hf_image_generator.html">hf_image_generator</a></li>
+        <li><a href="./web_pages/fal_image_gen.html">fal_image_generator</a></li>
 
       </ul>
     </nav>
